--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" async>
+
 
    <!-- <link href="css/style.css" rel="stylesheet"> -->
    <!-- Inline style --> 
@@ -21,6 +20,9 @@
   </head>
 
   <body>
+    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" lazyload >
+    
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
