--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   </head>
 
   <body>
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" lazyload >
-    
+    <!-- Hmm, what is the impact of web fonts on speed? Measure it... 
+    using lazyload to enhance performance-->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" >
+
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
