--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... 
     using lazyload to enhance performance-->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" >
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" lazyload >
 
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
