--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
 <body>
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... 
-    using async to enhance performance-->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" async>
+    using async to enhance performance
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" async> -->
 
     <header>
         <a href="/"><img src="img/profilepic.jpg"></a>
